--- a/2.html
+++ b/2.html
@@ -1,75 +1,13 @@
+
+
+
+
+
+
+
+
+
 <html>
-	
-	<head>
-		
-		<meta property="og:title" content="O Incrível Método da Loto Está Dando o Que Falar !" />
-<meta property="og:type" content="website" />
-		<meta property="og:description" content="vje" />
-<meta property="og:url" content="https://hidrantefoneazul.github.io" />
-		<meta property="og:image" content="http://uploaddeimagens.com.br/images/001/900/327/full/7.png?1550234747" />
-	<meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no">
-<Title>O Incrível Método da Loto Está Dando o Que Falar !</Title>
-	<style type="text/css">
-	
-	*{color:#000000;}
-	
-.marcar{font-family:'Impact',serif}
-	*{text-transform:uppercase;font-family:Times,serif;font-size:47px;font-weight:normal}
-	.body{margin-top:37px;width:800px;border:1px solid black;background:#fff2cc}
-	.content{margin-top:37px;width:600px;background:transparent}
-	
-
-  }
-
-}
-  
-		</style>
-	</head>
-	<body bgcolor="#222222">
-	
-	<center><div class="body"><div class="content">
-	
-		<h1 style="text-align:center">O Incrível Método da Loto Está Dando o Que Falar !</h1>
-		<img class="image" style="width:100%;height:45%" src="http://uploaddeimagens.com.br/images/001/900/327/full/7.png?1550234747"/> 	
-		<h2 style="font-family:'Impact',serif">UM SENHOR REVELOU ESSE MÉTODO<br>E TODOS <MARK><SPAN class="marcar">FICARAM CHOCADOS</mark><br>AO SABER QUE TODOS<br><MARK><SPAN class="marcar">ESTAVAM GANHANDO<br>UTILIZANDO APENAS ISSO</mark></h2>
-
-	
-	
-	</div></div>
-	
-	
-	
-			
-		<div class="body"><div class="content">
-		<h2 style="font-family:'Impact',serif;text-align:right;margin-right:20px" >
-		COMO É O MÉTODO?		
-		</h2>
-		<h3 style="font-size:37px;TEXT-TRANSFORM:NONE"> 
-		
-		Luis Carlos Flores, ficou muito famoso por criar o método que dizia conseguir ajudar as pessoas a alcançar o sucesso jogando na LOTOFÁCIL.<br>É claro que a maioria das pessoas duvidaram de inicio, mas isso mudou com o tempo. 
-<br><br>
-Luis já havia ajudado muitos no passado com esse método, e agora, ele voltou com seu método de forma melhorada... foi só questão de tempo até que o povo começasse a comprar e enlouquecer com os resultados.
-<br><br>
-Hoje, muitas pessoas devem tudo que tem a um simples homens, que muitos <MARK><SPAN class="marcar">dizem ser um gênio</mark>.		
-		</h3>
-		</div></div>
-		
-		
-			
-		<div class="body"><div class="content">
-		<h2 style="font-family:'Impact',serif;text-align:right;margin-right:20px" >
-		REALMENTE FUNCIONA?		
-		</h2>
-		<h3 style="font-size:37px;TEXT-TRANSFORM:NONE"> 
-		
-		Estudos foram feitos para testar a eficácia do método, e todos os resultados mostravam no mínimo <MARK><SPAN class="marcar">33,33% </mark>de aumento das chances de se fazer 13 pontos ou mais.<br> este é um numero realmente impressionante, levando em conta que o comum <MARK><SPAN class="marcar">é de apenas 0,14%.</mark>
-<br><br>
-Luis Carlos Flores entrou para Mensa International com um<MARK><SPAN class="marcar"> QI de 154,<br> 6 pontos a menos do que einstein</mark>, um numero muito elevado a média mundial.<br>Tendo em contas todos esses dados, dá para dizer que Flores é Realmente <MARK><SPAN class="marcar">Um Gênio</mark>
-<br><br>
-Além de tudo ele confia tanto no próprio método, que <MARK><SPAN class="marcar">se em 30 dias o método não gerar resultados</mark> ele <MARK><SPAN class="marcar">devolve 100% do seu dinheiro, sem fazer pergunta alguma!</mark><br>E você? Testaria o Vencendo na lotofácil? Nós achamos que com todas as regalias... Vale a pena testar hahah!<br><br>
-Para quem tiver interesse deixaremos o vídeo do método aí embaixo...<br>Até a próxima galera, fiquem com deus!		
-		</h3>
-			<html>
 	
 	<head>
 		
@@ -144,21 +82,17 @@ Para quem tiver interesse deixaremos o vídeo do método aí embaixo...<br>Até 
 		</div></div></center>
 		
 		
-		
-	
+		<center>
+<div class="body"><div class="content"><h3 style="font-size:37px;TEXT-TRANSFORM:NONE">Clique no Vídeo Abaixo Onde o Próprio Luis mostra <mark> DETALHADAMENTE</mark> a experiência das pessoas que utilizaram o método e mudaram suas vidas <mark>COMPLETAMENTE</mark></h3>
 
-
-		</body>
-</html>
-
-	
-
-
-
-
-		
-		
-		
+	 
+		</div><center><a></a><a target="_blank" href="http://mon.net.br/17rzd?src=Facebook%7CPDF2Gif%7Cbutton|desktop|&amp;split=5"><img class="image" style="width:97%;height:23%" src="http://brasilmanchete.com/imagens/teste2.gif"></a><a></a></center><a> 				
+ <iframe style=" width: 90% !important; height: 41.8% !important;" src="https://www.youtube-nocookie.com/embed/bUx-6vAU1YQ?wmode=opaque&amp;showinfo=0&amp;autoplay=1&amp;controls=0&amp;modestbranding=1&amp;rel=0&amp;start=0" frameborder="0" allowfullscreen="allowfullscreen"></iframe> 		 
+	</a>		
+<center><a target="_blank" href="https://gtxflores.online/mobile-2/?utm_source=Facebook%7CPDF2Vid%7Cbutton"><img class="image" style="width:97%;height:21%" src="http://brasilmanchete.com/imagens/botao.png?id=4"></a><a></a></center><a> 
+	<p style="text-transform: capitalize;font-size:11px;float:right">brecha descoberta ltda©</p><br>
+</a></div>
+		</center>
 	
 
 
